--- a/PJ1/index.html
+++ b/PJ1/index.html
@@ -4,21 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <h1>testando branch</h1>
+        <h1>Testando Branch</h1>
     </header>
     <main>
-        <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-             Totam ab, placeat sit nemo debitis dolore earum, minima 
-             fugiat vero iste, quos ad minus! Quas commodi quos debitis
-              quibusdam. Voluptatem, quibusdam.</h1>
-              <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Totam ab, placeat sit nemo debitis dolore earum, minima 
-                fugiat vero iste, quos ad minus! Quas commodi quos debitis
-                 quibusdam. Voluptatem, quibusdam.</h1>
+       <section>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Aut cum, reprehenderit, consectetur eaque aliquid odio possimus
+                culpa minima voluptate veritatis debitis sunt accusamus laboriosam
+                quaerat corporis nostrum dolorum. Velit, incidunt.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Qui deserunt consequuntur error ut, quam commodi delectus eum sapiente
+                dolorum molestiae perferendis adipisci 
+                corrupti architecto sit veniam distinctio sunt ipsa laboriosam.
+            </p>
+       </section>
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Aut cum, reprehenderit, consectetur eaque aliquid odio possimus
+                culpa minima voluptate veritatis debitis sunt accusamus laboriosam
+                quaerat corporis nostrum dolorum. Velit, incidunt.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Qui deserunt consequuntur error ut, quam commodi delectus eum sapiente
+                dolorum molestiae perferendis adipisci 
+                corrupti architecto sit veniam distinctio sunt ipsa laboriosam.
+            </p>
+       </section>
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Aut cum, reprehenderit, consectetur eaque aliquid odio possimus
+                culpa minima voluptate veritatis debitis sunt accusamus laboriosam
+                quaerat corporis nostrum dolorum. Velit, incidunt.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Qui deserunt consequuntur error ut, quam commodi delectus eum sapiente
+                dolorum molestiae perferendis adipisci 
+                corrupti architecto sit veniam distinctio sunt ipsa laboriosam.
+            </p>
+       </section>
     </main>
+    <footer>
+        <p>
+            Criado por <a href="https://github.com/Mundao23/Projeto-site-1" target="_blank">Raimundo Júnio Santos</a>
+        </p>
+    </footer>
 </body>
 </html>
